--- a/explore.css
+++ b/explore.css
@@ -146,6 +146,7 @@ hr{
 }
 
 
+
 .rectangle1 {
     margin-top: 80px;
     margin-bottom: 40px;
@@ -162,12 +163,22 @@ hr{
 
 }
 
+
 .bookimg {
     width: 40%;
     height: 80%;
     position: absolute;
     margin-bottom: 200px;
     left: 225px;
+    z-index: 1;
+    box-shadow: 5px 5px 4px 4px rgba(0, 0, 0, 0.25);
+}
+.bookimg1{
+    width: 40%;
+    height: 80%;
+    position: absolute;
+    margin-bottom: 200px;
+    left: 30px;
     z-index: 1;
     box-shadow: 5px 5px 4px 4px rgba(0, 0, 0, 0.25);
 }
@@ -186,6 +197,28 @@ hr{
     background-clip: content-box; /* This property removes the opacity from the text */
     z-index: 0;
 }
+.booktype2{
+    position: relative;
+    left: 250px;
+    top: 38%;
+    font-family: 'Forum';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 30px;
+    /* line-height: 50px; */
+    letter-spacing: 0.03em;
+    color: rgba(255, 255, 255);
+    background-clip: content-box; /* This property removes the opacity from the text */
+    z-index: 0;
+}
+.author1{
+    position: relative;
+    left 
+}
+
+
+
+
 
 
 
