--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
 body {
-    margin: 0px;
+    margin: 0;
+    padding: 0; 
 }
 
 .bgc{
@@ -23,25 +24,21 @@ body::-webkit-scrollbar {
 }
 .container {
     display: grid;
-    grid-template-columns: repeat(3, 1fr); /* Adjust the number of columns as needed */
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); /* Adjust the number of columns as needed */
     gap: 20px; /* Adjust the gap between items */
-    margin-left: 25px;
+    margin: 0 10px;
 }
 
 /* this is the css for bookshemlimage */
 .titleimg{
-    width: 350px;
+    width: 100%;
     padding-top: 20px;
-    flex-direction: column;
+    max-width: 350px;
 }
 
 /* css for navbar  */
 .navbar{
-    padding-top: 20px;
-    padding-left: 90px;
-}
-.titleimg{
-    width: 350px;
+    padding: 20px 10px;
 }
 
 nav{
@@ -54,7 +51,7 @@ nav{
 nav ul li {
     display: inline-block;
     list-style: none;
-    margin: 10px 20px;
+    margin: 10px 10px;
 }
 
 nav ul li a {
@@ -167,46 +164,35 @@ hr{
 }
 
 .genr{
- position: relative;
- width: 387px;
- height: 87px;
- margin-left: 40%;
- font-family: 'Playfair Display';
- font-style: normal;
- font-weight: 400;
- font-size: 50px;
- line-height: 67px;
- color: #C19162;
+    width: 100%;
+    margin-left: 10px;
+    font-size: 30px;
 }
 
 .item {
-    position: relative;
-    width: 100%;
     display: flex;
     flex-direction: column;
-    margin-top: 50px;
+    margin-top: 20px;
 }
 
 .rectangle {
     box-sizing: border-box;
     margin-top: 215px;
-    width: 95%;
+    width: 100%;
     height: 320px;
     background: rgba(193, 145, 98, 0.3);
     opacity: 0.5;
-    border-width: 1px 2px 2px 2px;
     border-style: solid;
-    border-color: #C19162;
+    border: 1px solid #C19162;
     box-shadow: inset 0px 4px 20px rgba(0, 0, 0, 0.25);
 }
 
 .bookimg {
-    width: 230px;
-    height: 350px;
-    position: absolute;
-    margin-top: 170px;
-    left: 220px;
-    z-index: 1;
+    width: 100%;
+    max-width: 230px;   
+    height: auto;
+    margin-top: 20px;
+    left: 0;
     box-shadow: 5px 5px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
@@ -369,6 +355,10 @@ filter: blur(10px);
     margin-top: 200px;
     margin-bottom: 350px
 }
+.author1{
+    margin-left: 20px;
+    margin-top: 100px;
+}
 /* --------------------------------------------------------------------------------------------------------------------------------------- */
 /* footer container  */
 
@@ -448,5 +438,6 @@ filter: blur(10px);
     border: none;
     cursor: pointer;
     width: 100%;
-    fill: 60%;
+    font-size: 16px;
+    border-radius: 5px;
 }
