--- a/caterogies.css
+++ b/caterogies.css
@@ -4,6 +4,7 @@ body {
 
 .bgc{
     background-color:#0B3341;
+    position: relative;
 }
 body::-webkit-scrollbar {
     width: 0px; /* Adjust the width as needed */
@@ -94,10 +95,35 @@ hr{
 
 .woodbgc{
     border-radius: 30px;
-    position: relative;
+    z-index: 0; 
     object-fit: cover;
+    position: absolute;
     width: 90%;
     margin-left: 5%;
     margin-top: 5%;
     margin-right: 5%;
+}
+.slb {
+    position: absolute;
+    width: 90%;
+    margin-left: 5%;
+    margin-top: 35%;
+  
+}
+.slb2 {
+    position: absolute;
+    width: 90%;
+    margin-left: 5%;
+    margin-top: 70%;
+  
+}
+.slb3 {
+    position: absolute;
+    width: 90%;
+    margin-left: 5%;
+    margin-top: 95%;
+  
+}
+.container {
+    position: relative;
 }
