--- a/caterogies.css
+++ b/caterogies.css
@@ -111,6 +111,7 @@ hr{
     width: 100%;
     margin-left: 0%;
     margin-top: 35%;
+    z-index: 0;
   
 }
 .slb2 {
@@ -125,6 +126,15 @@ hr{
     width: 100%;
     margin-left: 0%;
     margin-top: 98%;
+    z-index: 0;
+}
+
+.img1{
+    position: absolute;
+    width: 17%;
+    margin-left: 37%;
+    margin-top: 11%;
+    z-index: 1;
 }
 
 .text{
