--- a/explore.css
+++ b/explore.css
@@ -91,7 +91,12 @@ hr{
 }
 
 /* ----------------------------------------------------------------------------------------------------------------------------------------------------------- */
-
+.shpc1{
+    background-color: #C19162CC;
+    width: 100%;
+    padding-bottom: 4%;
+    margin-top: 10%;
+}
 .rectangle{
     position: relative;
     border: 4px solid rgba(193, 145, 98, 0.5);
@@ -121,8 +126,7 @@ hr{
 }
 
 .genr{
-    position: relative;
-    width: 500px;
+    width: 600px;
     height: 87px;
     margin-left: 38%;
     font-family: 'Playfair Display';
@@ -131,7 +135,31 @@ hr{
     font-size: 50px;
     line-height: 67px;
     color: #C19162;
+    vertical-align: middle;
    }
+
+.genr1{
+    font-family: Playfair Display;
+    font-size: 35px;
+    font-weight: 400;
+    letter-spacing: 0.03em;
+    text-align: left;
+    color: white;
+    display: inline-block;
+    width: 200px;
+    padding-top: 60px;
+    padding-left: 50px;
+    }
+
+.genr2{
+    width: 900px;
+}
+
+.genr3{
+    display: inline-block;
+    margin-top: -50%;
+    margin-left: 10%;
+}
 
    .item {
     position: relative;
@@ -163,22 +191,32 @@ hr{
 
 }
 
-
 .bookimg {
     width: 40%;
     height: 80%;
     position: absolute;
-    margin-bottom: 200px;
-    left: 225px;
+    margin-bottom: 0%;
+    left: 46%;
     z-index: 1;
     box-shadow: 5px 5px 4px 4px rgba(0, 0, 0, 0.25);
 }
+
 .bookimg1{
     width: 40%;
     height: 80%;
     position: absolute;
-    margin-bottom: 200px;
-    left: 30px;
+    margin-bottom: 0%;
+    left: 7%;
+    z-index: 1;
+    box-shadow: 5px 5px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.bookimg2 {
+    width: 40%;
+    height: 80%;
+    position: absolute;
+    margin-bottom: 0%;
+    left: 46%;
     z-index: 1;
     box-shadow: 5px 5px 4px 4px rgba(0, 0, 0, 0.25);
 }
@@ -199,8 +237,10 @@ hr{
 }
 .booktype2{
     position: relative;
-    left: 250px;
-    top: 38%;
+    top: 34%;
+    left: 58%;
+    word-wrap: break-word;
+    display: inline-block;
     font-family: 'Forum';
     font-style: normal;
     font-weight: 400;
@@ -211,12 +251,191 @@ hr{
     background-clip: content-box; /* This property removes the opacity from the text */
     z-index: 0;
 }
-.author1{
+.rectangle2 {
+    margin-top: 80px;
+    margin-bottom: 40px; 
+    box-sizing: border-box;
+    width: 5%;
+    height:250px;
+    opacity: 0.5;
+    border-style: solid;
+    border: 5px solid #C19162;
+    box-shadow: inset 0px 4px 20px rgba(0, 0, 0, 0.25);
+    
+
+}
+.title1{
+    font-family: Open Sans;
+    font-size: 25px;
+    font-weight: 600;   
+    line-height: 48px;
+    letter-spacing: 0.03em;
+    vertical-align: middle;
+    display: inline-block;
+    margin-left: 350px;
+    color: #0B3341;
+    margin-top: -150px;
+    width: 420px;
+}
+.age1{
+    background: #0B3341;
+    color: white;
+    font-family: Open Sans;
+    padding-top: 1.5%;
+    padding-left: 2.5%;
+    padding-bottom: 1.6%;
+    padding-right: 2.5%;
+    border: none;
+    font-size: 18px;
+    margin-left: -435px;
+    cursor: pointer;
+    border: 1px solid transparent;
+    border-width: 1px;
+    box-sizing:border-box;
+}
+.age2{
+    background: #0B3341;
+    color: white;
+    font-family: Open Sans;
+    padding-top: 1.5%;
+    padding-left: 2.5%;
+    padding-bottom: 1.6%;
+    padding-right: 2.5%;
+    border: none;
+    font-size: 18px;
+    margin-left: 15px;
+    cursor: pointer;
+    border: 1px solid transparent;
+    border-width: 1px;
+    box-sizing:border-box;
+}
+
+.age3{
+    background: #0B3341;
+    color: white;
+    font-family: Open Sans;
+    padding-top: 1.5%;
+    padding-left: 2.5%;
+    padding-bottom: 1.6%;
+    padding-right: 2.5%;
+    border: none;
+    font-size: 18px;
+    margin-left: 15px;
+    cursor: pointer;
+    border: 1px solid transparent;
+    border-width: 1px;
+    box-sizing:border-box;
+}
+
+.age4{
+    background: #0B3341;
+    color: white;
+    font-family: Open Sans;
+    padding-top: 1.5%;
+    padding-left: 2%;
+    padding-bottom: 1.6%;
+    padding-right: 2%;
+    border: none;
+    font-size: 18px;
+    margin-left: 339px;
+    margin-top: 25px;
+    cursor: pointer;
+    border: 1px solid transparent;
+    border-width: 1px;
+    box-sizing:border-box;
+}
+
+.age5{
+    background: #0B3341;
+    color: white;
+    font-family: Open Sans;
+    padding-top: 1.5%;
+    padding-left: 1.5%;
+    padding-bottom: 1.6%;
+    padding-right: 1.5%;
+    border: none;
+    font-size: 18px;
+    margin-left: 15px;
+    cursor: pointer;
+    border: 1px solid transparent;
+    border-width: 1px;
+    box-sizing:border-box;
+}
+
+.age6{
+    background: #0B3341;
+    color: white;
+    font-family: Open Sans;
+    padding-top: 1.5%;
+    padding-left: 2.7%;
+    padding-bottom: 1.6%;
+    padding-right: 2.8%;
+    border: none;
+    font-size: 18px;
+    margin-left: 15px;
+    cursor: pointer;
+    border-width: 1px;
+    box-sizing:border-box;
+
+}
+
+.age1:hover,
+.age2:hover,
+.age3:hover,
+.age4:hover,
+.age5:hover,
+.age6:hover{
+    background-color: #C19162CC;
+    border: solid;
+    border-width: 3px;
+    border-color: #0B3341;
+}
+
+.pic1{
     position: relative;
-    left 
+    left: -29%;
+    height: 10%;
+    width: 15%;
+    transform: rotate(-11.45deg);
+    z-index: 1;
+    float: right;
+    margin-bottom: 4.5%;
+}
+
+.pic2{
+    position: relative;
+    height: 20%;
+    width: 18.55%;
+    z-index: 2;
+    float: right;
+}
+
+.pic3{
+    position: relative;
+    left: 32%;
+    height: 20%;
+    width: 18.55%;
+    transform: rotate(9.85deg);
+    z-index: 1;
+    float: right;
 }
 
 
+.author1{
+    width: 10%;
+    height: 10%;
+    position: absolute;
+    margin-bottom: 0%;
+    left: 7%;
+    z-index: 1;
+}
+
+@media screen and (max-width: 600px)
+{
+    genr{
+        margin-left: 1px;
+    }
+}
 
 
 
