--- a/explore.css
+++ b/explore.css
@@ -97,6 +97,10 @@ hr{
     padding-bottom: 4%;
     margin-top: 10%;
 }
+.shpc2{
+    margin-top: 10%;
+    width: 100%;
+}
 .rectangle{
     position: relative;
     border: 4px solid rgba(193, 145, 98, 0.5);
@@ -265,9 +269,8 @@ hr{
 
 }
 .title1{
-    font-family: Open Sans;
     font-size: 25px;
-    font-weight: 600;   
+    font-weight: 1000;   
     line-height: 48px;
     letter-spacing: 0.03em;
     vertical-align: middle;
@@ -280,10 +283,10 @@ hr{
 .age1{
     background: #0B3341;
     color: white;
-    font-family: Open Sans;
-    padding-top: 1.5%;
+    font-family: 'Open-Sans', sans-serif;
+    padding-top: 1.3%;
     padding-left: 2.5%;
-    padding-bottom: 1.6%;
+    padding-bottom: 1.3%;
     padding-right: 2.5%;
     border: none;
     font-size: 18px;
@@ -296,10 +299,10 @@ hr{
 .age2{
     background: #0B3341;
     color: white;
-    font-family: Open Sans;
-    padding-top: 1.5%;
+    font-family: 'Open-Sans', sans-serif;
+    padding-top: 1.3%;
     padding-left: 2.5%;
-    padding-bottom: 1.6%;
+    padding-bottom: 1.3%;
     padding-right: 2.5%;
     border: none;
     font-size: 18px;
@@ -313,10 +316,10 @@ hr{
 .age3{
     background: #0B3341;
     color: white;
-    font-family: Open Sans;
-    padding-top: 1.5%;
+    font-family: 'Open-Sans', sans-serif;
+    padding-top: 1.3%;
     padding-left: 2.5%;
-    padding-bottom: 1.6%;
+    padding-bottom: 1.3%;
     padding-right: 2.5%;
     border: none;
     font-size: 18px;
@@ -330,10 +333,10 @@ hr{
 .age4{
     background: #0B3341;
     color: white;
-    font-family: Open Sans;
-    padding-top: 1.5%;
+    font-family: 'Open-Sans', sans-serif;
+    padding-top: 1.3%;
     padding-left: 2%;
-    padding-bottom: 1.6%;
+    padding-bottom: 1.3%;
     padding-right: 2%;
     border: none;
     font-size: 18px;
@@ -348,10 +351,10 @@ hr{
 .age5{
     background: #0B3341;
     color: white;
-    font-family: Open Sans;
-    padding-top: 1.5%;
+    font-family: 'Open-Sans', sans-serif;
+    padding-top: 1.3%;
     padding-left: 1.5%;
-    padding-bottom: 1.6%;
+    padding-bottom: 1.3%;
     padding-right: 1.5%;
     border: none;
     font-size: 18px;
@@ -365,18 +368,17 @@ hr{
 .age6{
     background: #0B3341;
     color: white;
-    font-family: Open Sans;
-    padding-top: 1.5%;
-    padding-left: 2.7%;
-    padding-bottom: 1.6%;
-    padding-right: 2.8%;
+    font-family: 'Open-Sans', sans-serif;
+    padding-top: 1.3%;
+    padding-left: 5.2%;
+    padding-bottom: 1.3%;
+    padding-right: 5.2%;
     border: none;
     font-size: 18px;
     margin-left: 15px;
     cursor: pointer;
     border-width: 1px;
     box-sizing:border-box;
-
 }
 
 .age1:hover,
@@ -394,42 +396,37 @@ hr{
 .pic1{
     position: relative;
     left: -29%;
-    height: 10%;
-    width: 15%;
-    transform: rotate(-11.45deg);
+    height: 45%;
+    width: 45%;
     z-index: 1;
     float: right;
-    margin-bottom: 4.5%;
+    margin-right: -25%;
 }
 
-.pic2{
-    position: relative;
-    height: 20%;
-    width: 18.55%;
-    z-index: 2;
-    float: right;
+.author-pics{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    overflow: hidden;
 }
-
-.pic3{
-    position: relative;
-    left: 32%;
-    height: 20%;
-    width: 18.55%;
-    transform: rotate(9.85deg);
-    z-index: 1;
-    float: right;
-}
-
-
 .author1{
-    width: 10%;
-    height: 10%;
-    position: absolute;
-    margin-bottom: 0%;
-    left: 7%;
-    z-index: 1;
+    width: 40%;
+    margin-left: 2%;  
+}
+.author1:nth-child(4n){
+    margin-right: 0;
+}
+.author2{
+    width: 40%;
+    margin-bottom: 1%;
+    margin-left: 2%;
 }
 
+.author{
+    display: inline-block;
+}
+.showcase{
+    color: #C19162CC;
+}
 @media screen and (max-width: 600px)
 {
     genr{
