--- a/index.css
+++ b/index.css
@@ -1,452 +1,178 @@
+@import url('https://fonts.googleapis.com/css?family=Raleway:400,700');
+
+* {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;	
+	font-family: Raleway, sans-serif;
+}
+
 body {
-    margin: 0px;
+	background: linear-gradient(90deg, #C7C5F4, #776BCC);		
 }
 
-.bgc{
-    background-color:#0B3341;
-}
-body::-webkit-scrollbar {
-    width: 0px; /* Adjust the width as needed */
-  }
-  
-  body::-webkit-scrollbar-thumb {
-    background: transparent; /* Make the thumb (draggable part) transparent */
-  }
-  
-  body::-webkit-scrollbar-track {
-    background: transparent; /* Make the track (the scrollbar's background) transparent */
-  }
-.containernav{
-    display: grid;
-    grid-template-columns: 1fr 1fr ;
-    grid-gap: 20px;
-}
 .container {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr); /* Adjust the number of columns as needed */
-    gap: 20px; /* Adjust the gap between items */
-    margin-left: 25px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	min-height: 100vh;
 }
 
-/* this is the css for bookshemlimage */
-.titleimg{
-    width: 350px;
-    padding-top: 20px;
-    flex-direction: column;
+.screen {		
+	background: linear-gradient(90deg, #5D54A4, #7C78B8);		
+	position: relative;	
+	height: 600px;
+	width: 360px;	
+	box-shadow: 0px 0px 24px #5C5696;
 }
 
-/* css for navbar  */
-.navbar{
-    padding-top: 20px;
-    padding-left: 90px;
-}
-.titleimg{
-    width: 350px;
+.screen__content {
+	z-index: 1;
+	position: relative;	
+	height: 100%;
 }
 
-nav{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-wrap: wrap;
+.screen__background {		
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	z-index: 0;
+	-webkit-clip-path: inset(0 0 0 0);
+	clip-path: inset(0 0 0 0);	
 }
 
-nav ul li {
-    display: inline-block;
-    list-style: none;
-    margin: 10px 20px;
+.screen__background__shape {
+	transform: rotate(45deg);
+	position: absolute;
 }
 
-nav ul li a {
-    color: #fff;
-    text-decoration: none;
-    font-size: 18px;
-    position: relative;
-    font-family: 'Open Sans';
+.screen__background__shape1 {
+	height: 520px;
+	width: 520px;
+	background: #FFF;	
+	top: -50px;
+	right: 120px;	
+	border-radius: 0 72px 0 0;
 }
 
-nav ul li a::after {
-    content: '';
-    width: 0;
-    height: 3px;
-    background: #C19162 ;
-    position: absolute;
-    left: 0;
-    bottom: -6px;
-    transition: 0.5s;
-    font-family: 'Open Sans';
+.screen__background__shape2 {
+	height: 220px;
+	width: 220px;
+	background: #6C63AC;	
+	top: -172px;
+	right: 0;	
+	border-radius: 32px;
 }
 
-nav ul li a:hover::after {
-    width: 100%;
+.screen__background__shape3 {
+	height: 540px;
+	width: 190px;
+	background: linear-gradient(270deg, #5D54A4, #6A679E);
+	top: -24px;
+	right: 0;	
+	border-radius: 32px;
 }
 
-/* colour of the breakline */
-
-hr{
-    height: 1px;
-    background-color: #C19162;
-    border: none;
-    margin: 0px;
+.screen__background__shape4 {
+	height: 400px;
+	width: 200px;
+	background: #7E7BB9;	
+	top: 420px;
+	right: 50px;	
+	border-radius: 60px;
 }
 
-/* ---------------------------------------------------------------------------- */
-
-.bokshf{
-    position: absolute;
-    width: 550px;
-    height: 100px;
-    left: 500px;
-    top: 270px;
-    font-family: 'Playfair Display';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 60px;
-    line-height: 120px;
-    color: #C19162;
+.login {
+	width: 320px;
+	padding: 30px;
+	padding-top: 156px;
 }
 
-.para1{
-    position: absolute;
-    width: 550px;
-    height: 80px;
-    left: 485px;
-    top: 418px;
-
-    font-family: 'Forum';
-    font-style: normal;
-    font-weight: normal;
-    font-size: 20px;
-    line-height: 30px;
-    color: rgba(255, 255, 255, 0.7);
+.login__field {
+	padding: 20px 0px;	
+	position: relative;	
 }
 
-.para1l{
-    position: absolute;
-    width: 55px;
-    height: 0.5px;
-    left: 420px;
-    top: 454px;
-    color: #fff;
-    background-color: #fff;
+.login__icon {
+	position: absolute;
+	top: 30px;
+	color: #7875B5;
 }
 
-.expbtn{
-    margin-left: 590px;
-    margin-top: 470px;
-    box-sizing: border-box;
-    position: absolute;
-    width: 313.6px;
-    height: 63.6px;
-    background: #C19162;
-    border: 1px solid #0B3341;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
-    font-family: 'Open Sans';
-    font-style: normal;
-    font-size: 22px;
-    line-height: 40px;
-    color: #0B3341;
+.login__input {
+	border: none;
+	border-bottom: 2px solid #D1D1D4;
+	background: none;
+	padding: 10px;
+	padding-left: 24px;
+	font-weight: 700;
+	width: 75%;
+	transition: .2s;
 }
 
-.end2{
-    height: 1.4px;
-    background-color: #C19162;
-    border: none;
-    margin-top: 599px;
+.login__input:active,
+.login__input:focus,
+.login__input:hover {
+	outline: none;
+	border-bottom-color: #6A679E;
 }
 
-.readerspic{
-    width: 1510px;
+.login__submit {
+	background: #fff;
+	font-size: 14px;
+	margin-top: 30px;
+	padding: 16px 20px;
+	border-radius: 26px;
+	border: 1px solid #D4D3E8;
+	text-transform: uppercase;
+	font-weight: 700;
+	display: flex;
+	align-items: center;
+	width: 100%;
+	color: #4C489D;
+	box-shadow: 0px 2px 2px #5C5696;
+	cursor: pointer;
+	transition: .2s;
 }
 
-.end3{
-    height: 1.5px;
-    background-color: #C19162;
-    border: none;
-    margin-top: 0px;
+.login__submit:active,
+.login__submit:focus,
+.login__submit:hover {
+	border-color: #6A679E;
+	outline: none;
 }
 
-.genr{
- position: relative;
- width: 387px;
- height: 87px;
- margin-left: 40%;
- font-family: 'Playfair Display';
- font-style: normal;
- font-weight: 400;
- font-size: 50px;
- line-height: 67px;
- color: #C19162;
+.button__icon {
+	font-size: 24px;
+	margin-left: auto;
+	color: #7875B5;
 }
 
-.item {
-    position: relative;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    margin-top: 50px;
+.social-login {	
+	position: absolute;
+	height: 140px;
+	width: 160px;
+	text-align: center;
+	bottom: 0px;
+	right: 0px;
+	color: #fff;
 }
 
-.rectangle {
-    box-sizing: border-box;
-    margin-top: 215px;
-    width: 95%;
-    height: 320px;
-    background: rgba(193, 145, 98, 0.3);
-    opacity: 0.5;
-    border-width: 1px 2px 2px 2px;
-    border-style: solid;
-    border-color: #C19162;
-    box-shadow: inset 0px 4px 20px rgba(0, 0, 0, 0.25);
+.social-icons {
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
-.bookimg {
-    width: 230px;
-    height: 350px;
-    position: absolute;
-    margin-top: 170px;
-    left: 220px;
-    z-index: 1;
-    box-shadow: 5px 5px 4px 4px rgba(0, 0, 0, 0.25);
+.social-login__icon {
+	padding: 20px 10px;
+	color: #fff;
+	text-decoration: none;	
+	text-shadow: 0px 0px 8px #7875B5;
 }
 
-.booktype {
-    position: relative;
-    left: 20px;
-    top: 130px;
-    font-family: 'Forum';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 35px;
-    line-height: 50px;
-    letter-spacing: 0.03em;
-    color: rgba(255, 255, 255, 0.8);
-    background-clip: content-box; /* This property removes the opacity from the text */
-}
-
-/* --------------------------------------------------------------------------------------------------------------------------- */
-
-/* button css */
-.button-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 70px;
-}
-
-.button {
-    background-color: #C19162;
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
-    font-size: 16px;
-    border-radius: 5px;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-}
-
-.button span {
-    margin-left: 10px; /* Add space between text and arrow */
-    color: black; /* Change the color of the arrow to black */
-    font-size: 24px; /* Increase the font size for a larger arrow */
-    margin-right: 5px; /* Add right margin to center the arrow */
-}
-
-/* --------------------------------------------------------------------------------------------------------------------------------------- */
-
-/* featurebook css */
-.container2 {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 20px;
-    margin-top: 180px;
-}
-
-
-.box {
-    position: relative;
-    width: 400px;
-    height: 50px;
-    background: #C19162;
-    margin-left: 60px;
-}
-
-.a1 {
-    width: 350px;
-    font-family: 'Playfair Display';
-    font-style: normal;
-    font-weight: 200;
-    font-size: 30px;
-    line-height: 50px;
-    color: #000000;
-    margin-left: 220px;
-}
-
-.highlight-text {
-    color: #FFFFFF; /* White color for the text "of the month" */
-}
-
-.a3{
-    align-items: baseline;
-}
-
-.a2{
-    font-family: 'Forum';
-font-style: normal;
-font-weight: 200;
-font-size: 20px;
-line-height: 44px;
-margin-left: 200px;
-margin-top: 100px;
-margin-bottom: 5px;
-color: #FFFFFF;
-}
-
-.a4{
-    font-family: 'Forum';
-    margin-left: 200px;
-    color: #FFFFFF;
-    margin-top: 0px;
-}
-
-.a5{
-    font-family: 'Forum';
-    margin-left: 200px;
-    color: #FFFFFF;
-    opacity: 0.4;
-}
-
-.Fbook{
-    margin-left: 200px;
-    margin-top: 30px;
-    width: 300px;
-    height: 450px;
-    margin-bottom: 90px;
-}
-
-.a6{
-    background: rgba(217, 217, 217, 0.1);
-border: 1px solid #000000;
-filter: blur(10px);
-}
-
-.price {
-    color: #C19162; /* Replace with the desired color code for the price text */
-    margin-left: 50px;
-}
-
-.container3 {
-    display: flex;
-    flex-direction: column;
-    align-items: baseline;
-    margin-left: 300px;
-    color: #FFFFFF;
-}
-
-.engm {
-    font-family: 'Forum';
-    font-style: normal;
-    font-weight: 50px;
-    font-size: 20px;
-    line-height: 30px;
-    width: 850px;
-    margin-bottom: 0px;
-}
-
-.button-container2 {
-    display: flex;
-    align-items: center;
-    font-size: 20px;
-}
-
-.button {
-    margin-left: 10px; /* Adjust the margin to control the space between the text and the button */
-}
-
-.img2{
-    width: 1536px;
-    margin-top: 200px;
-    margin-bottom: 350px
-}
-/* --------------------------------------------------------------------------------------------------------------------------------------- */
-/* footer container  */
-
-.Fcontainer {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr); /* Adjust the number of columns as needed */
-    gap: 20px; /* Adjust the gap between items */
-    margin-left: 25px;
-    margin-top: 50px;
-    
-}
-
-.footer{
-    background-color: #0B1214;
-}
-.Fcont1{
-    color: white;
-    font-family: 'Open Sans';
-    font-weight: lighter;
-    margin-top: 50px;
-
-}
-
-/* Add CSS for the link with the specified color */
-.click-link {
-    color: #C19162;
-}
-
-.Fcont2 {
-    display: flex;
-    align-items: baseline; /* Vertically align items within the container */
-    color: white;
-    font-family: 'Open Sans';
-    font-weight: lighter;
-    margin-top: 50px;
-}
-
-/* Add some spacing between the heading and the link */
-.Fcont2 h2 {
-    margin-right: 10px; /* Adjust the margin as needed */
-}
-
-/* Style the link with the specified color */
-.click-link {
-    color: #C19162;
-    text-decoration: none;
-}
-
-.Fcont3{
-    color: #C19162;
-    margin-top: 90px;
-    margin-left: 200px;
-    font-family: 'Playfair Display';
-    font-weight: 200px;
-    font-size: 20px;
-}
-
-.Fcontainer1 {
-    display: grid;
-    grid-template-columns: 1fr 1fr 2fr; /* Define 3 columns with different widths */
-    grid-gap: 20px; /* Add spacing between columns */
-    margin-top: 20px; /* Add spacing between the two sections */
-    margin-left: 25px;
-}
-
-/* Add styles for the button above the footer */
-.button-above-footer {
-    text-align: center; 
-    margin-top: 20px; /* Add some spacing above the button */
-    
-}
-
-.footer-button {
-    background-color: #C19162; /* Set the button's background color */
-    color: #fff; /* Set the text color */
-    padding: 10px 20px; /* Adjust the padding as needed */
-    border: none;
-    cursor: pointer;
-    width: 100%;
-    fill: 60%;
+.social-login__icon:hover {
+	transform: scale(1.5);	
 }
