--- a/explore.css
+++ b/explore.css
@@ -442,6 +442,7 @@ hr{
     letter-spacing: 0.03em;
     color: #C19162;
     margin-bottom: 2px;
+    padding-top: 30%;
 }
 
 .showcase2{
@@ -453,6 +454,7 @@ hr{
     margin-top: 5px;
     letter-spacing: 0.03em;
     color: #FFFFFF;
+    padding-left: 6%;
 }
 
 
