--- a/caterogies.css
+++ b/caterogies.css
@@ -136,12 +136,20 @@ hr{
     margin-top: 11%;
     z-index: 1;
 }
+.container1{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    margin-top: 46%;
+    max-height: 100%;
+    grid-gap: 20%;
+
+}
 .img2{
-    position: absolute;
-    width: 10%;
-    margin-left: 10%;
-    margin-top: 45%;
+    position: relative;
+    width: 200%;
+    margin-top: 46%;
     z-index: 1;
+    padding-right: 10%;
 }
 
 .text{
